--- a/jjb/aai/aai-babel.yaml
+++ b/jjb/aai/aai-babel.yaml
@@ -3,7 +3,6 @@
     name: aai-babel
     project-name: 'aai-babel'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -33,3 +32,14 @@
     mvn-settings: 'aai-babel-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: aai-babel-clm
+    jobs:
+      - gerrit-maven-clm
+    project: 'aai/babel'
+    project-name: 'aai-babel'
+    branch: 'master'
+    mvn-settings: 'aai-babel-settings'
+    mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
