--- a/jjb/aai/aai-esr-server.yaml
+++ b/jjb/aai/aai-esr-server.yaml
@@ -3,7 +3,6 @@
     name: aai-esr-server-master
     project-name: 'aai-esr-server'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -33,3 +32,12 @@
     mvn-settings: 'aai-esr-server-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: aai-esr-server-clm
+    jobs:
+      - gerrit-maven-clm
+    project: 'aai/esr-server'
+    project-name: 'aai-esr-server'
+    branch: 'master'
+    mvn-settings: 'aai-esr-server-settings'
