--- a/jjb/aai/aai-logging-service.yaml
+++ b/jjb/aai/aai-logging-service.yaml
@@ -3,7 +3,6 @@
     name: aai-logging-service-master
     project-name: 'aai-logging-service'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -29,3 +28,12 @@
     mvn-settings: 'aai-logging-service-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: aai-logging-service-clm
+    jobs:
+      - gerrit-maven-clm
+    project: 'aai/logging-service'
+    project-name: 'aai-logging-service'
+    branch: 'master'
+    mvn-settings: 'aai-logging-service-settings'
