--- a/jjb/aai/aai-sparky-be.yaml
+++ b/jjb/aai/aai-sparky-be.yaml
@@ -3,7 +3,6 @@
     name: aai-sparky-be-master
     project-name: 'aai-sparky-be'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -32,3 +31,12 @@
     mvn-settings: 'aai-sparky-be-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: aai-sparky-be-clm
+    jobs:
+      - gerrit-maven-clm
+    project: 'aai/sparky-be'
+    project-name: 'aai-sparky-be'
+    branch: 'master'
+    mvn-settings: 'aai-sparky-be-settings'
