--- a/jjb/aai/aai-sparky-fe.yaml
+++ b/jjb/aai/aai-sparky-fe.yaml
@@ -4,7 +4,6 @@
     project-name: 'aai-sparky-fe'
     build-node: 'centos7-builder-4c-4g'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -17,3 +16,12 @@
     mvn-settings: 'aai-sparky-fe-settings'
     files: '**'
     archive-artifacts: ''
+
+- project:
+    name: aai-sparky-fe-clm
+    jobs:
+      - gerrit-maven-clm
+    project: 'aai/sparky-fe'
+    project-name: 'aai-sparky-fe'
+    branch: 'master'
+    mvn-settings: 'aai-sparky-fe-settings'
