--- a/jjb/aai/aai-spike.yaml
+++ b/jjb/aai/aai-spike.yaml
@@ -3,7 +3,6 @@
     name: aai-spike
     project-name: 'aai-spike'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -30,3 +29,12 @@
     branch: 'master'
     mvn-settings: 'aai-spike-settings'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: aai-spike-clm
+    jobs:
+      - gerrit-maven-clm
+    project: 'aai/spike'
+    project-name: 'aai-spike'
+    branch: 'master'
+    mvn-settings: 'aai-spike-settings'
