--- a/jjb/aai/aai-chameleon.yaml
+++ b/jjb/aai/aai-chameleon.yaml
@@ -3,7 +3,6 @@
     name: aai-chameleon
     project-name: 'aai-chameleon'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -18,3 +17,12 @@
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
+
+- project:
+    name: aai-chameleon-clm
+    jobs:
+      - gerrit-maven-clm
+    project: 'aai/chameleon'
+    project-name: 'aai-chameleon'
+    branch: 'master'
+    mvn-settings: 'aai-chameleon-settings'
