--- a/jjb/aai/aai-esr-gui.yaml
+++ b/jjb/aai/aai-esr-gui.yaml
@@ -3,7 +3,6 @@
     name: aai-esr-gui
     project-name: 'aai-esr-gui'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -21,3 +20,11 @@
     mvn-profile: docker
     build-node: ubuntu1604-builder-4c-4g
 
+- project:
+    name: aai-esr-gui-clm
+    jobs:
+      - gerrit-maven-clm
+    project: 'aai/esr-gui'
+    project-name: 'aai-esr-gui'
+    branch: 'master'
+    mvn-settings: 'aai-esr-gui-settings'
