--- a/jjb/aai/aai-router-core-service.yaml
+++ b/jjb/aai/aai-router-core-service.yaml
@@ -3,7 +3,6 @@
     name: aai-router-core-master
     project-name: 'aai-router-core'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -29,3 +28,12 @@
     mvn-settings: 'aai-router-core-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: aai-router-core-clm
+    jobs:
+      - gerrit-maven-clm
+    project: 'aai/router-core'
+    project-name: 'aai-router-core'
+    branch: 'master'
+    mvn-settings: 'aai-router-core-settings'
