--- a/jjb/aai/aai-traversal.yaml
+++ b/jjb/aai/aai-traversal.yaml
@@ -3,7 +3,6 @@
     name: aai-traversal-master
     project-name: 'aai-traversal'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -35,4 +34,14 @@
     mvn-settings: 'aai-traversal-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+    mvn-version: 'mvn35'
+
+- project:
+    name: aai-traversal-clm
+    jobs:
+      - gerrit-maven-clm
+    project: 'aai/traversal'
+    project-name: 'aai-traversal'
+    branch: 'master'
+    mvn-settings: 'aai-traversal-settings'
     mvn-version: 'mvn35'
