--- a/jjb/sdc/sdc-sdc-workflow-designer.yaml
+++ b/jjb/sdc/sdc-sdc-workflow-designer.yaml
@@ -31,6 +31,6 @@
     project-name: 'sdc-sdc-workflow-designer'
     branch: 'master'
     mvn-settings: 'sdc-sdc-workflow-designer-settings'
-    mvn-params: '-Dsonar.branch={branch}'
+    mvn-params: '-Djacoco.skip=false -Dsonar.branch={branch}'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m'
