Move CSIT to integration/csit repo
To facilite branching of CSIT tests, all CSIT test
code and scripts are relocated to the integration/csit
repo.

Change-Id: I96530af21740adc62e312457ff992b7ecb1dfcff
Issue-ID: INT-671
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/jjb/integration/integration-macros.yaml
+++ b/jjb/integration/integration-macros.yaml
@@ -41,7 +41,7 @@
 - builder:
     name: integration-run-test
     builders:
-      - shell: "${WORKSPACE}/test/csit/run-csit.sh ${TESTPLAN} ${TESTOPTIONS}"
+      - shell: "${WORKSPACE}/run-csit.sh ${TESTPLAN} ${TESTOPTIONS}"
 
 - builder:
     name: integration-autorelease-fix-relativepaths
