--- a/jjb/integration/integration-templates-csit.yaml
+++ b/jjb/integration/integration-templates-csit.yaml
@@ -9,12 +9,12 @@
 
     properties:
       - lf-infra-properties:
-          project: 'integration'
+          project: 'integration/csit'
           build-days-to-keep: '{build-days-to-keep}'
 
     parameters:
       - infra-parameters:
-          project: 'integration'
+          project: 'integration/csit'
           branch: '{branch}'
           refspec: 'refs/heads/{branch}'
           artifacts: '{archive-artifacts}'
@@ -37,9 +37,9 @@
     triggers:
       - gerrit-trigger-patch-submitted:
           server: '{server-name}'
-          project: 'integration'
+          project: 'integration/csit'
           branch: '{branch}'
-          files: 'test/csit/**/{project-name}/**'
+          files: '**/{project-name}/**'
 
     builders:
       - integration-install-robotframework
@@ -63,12 +63,12 @@
 
     properties:
       - lf-infra-properties:
-          project: 'integration'
+          project: 'integration/csit'
           build-days-to-keep: '{build-days-to-keep}'
 
     parameters:
       - infra-parameters:
-          project: 'integration'
+          project: 'integration/csit'
           branch: '{branch}'
           refspec: 'refs/heads/{branch}'
           artifacts: '{archive-artifacts}'
@@ -95,9 +95,9 @@
     triggers:
       - gerrit-trigger-patch-submitted:
           server: '{server-name}'
-          project: 'integration'
+          project: 'integration/csit'
           branch: '{branch}'
-          files: 'test/csit/**/{project-name}/**'
+          files: '**/{project-name}/**'
 
     builders:
       - integration-install-robotframework
@@ -139,12 +139,12 @@
 
     properties:
       - lf-infra-properties:
-          project: 'integration'
+          project: 'integration/csit'
           build-days-to-keep: '{build-days-to-keep}'
 
     parameters:
       - infra-parameters:
-          project: 'integration'
+          project: 'integration/csit'
           branch: '{branch}'
           refspec: 'refs/heads/{branch}'
           artifacts: '{archive-artifacts}'
@@ -167,9 +167,9 @@
     triggers:
       - gerrit-trigger-patch-merged:
           server: '{server-name}'
-          project: 'integration'
+          project: 'integration/csit'
           branch: '{branch}'
-          files: 'test/csit/**/{project-name}/**'
+          files: '**/{project-name}/**'
       - timed: '@daily'
       - reverse:
           jobs: '{obj:trigger_jobs}'
@@ -196,12 +196,12 @@
 
     properties:
       - lf-infra-properties:
-          project: 'integration'
+          project: 'integration/csit'
           build-days-to-keep: '{build-days-to-keep}'
 
     parameters:
       - infra-parameters:
-          project: 'integration'
+          project: 'integration/csit'
           branch: '{branch}'
           refspec: 'refs/heads/{branch}'
           artifacts: '{archive-artifacts}'
@@ -228,9 +228,9 @@
     triggers:
       - gerrit-trigger-patch-merged:
           server: '{server-name}'
-          project: 'integration'
+          project: 'integration/csit'
           branch: '{branch}'
-          files: 'test/csit/**/{project-name}/**'
+          files: '**/{project-name}/**'
       - timed: '@daily'
       - reverse:
           jobs: '{obj:trigger_jobs}'
