Add docker image name to sub modules
Add docker image name explicitly as these are sub modules under a main
repo.

Change-Id: Ie8dc983679e5c8d0b5e6a39a3e4efc9f6fc9fc18
Issue-ID: AAI-1690
Signed-off-by: Ravi Geda <gravik@amdocs.com>

--- a/jjb/aaf/aaf-cadi.yaml
+++ b/jjb/aaf/aaf-cadi.yaml
@@ -37,6 +37,7 @@
           pom: 'sidecar/fproxy/pom.xml'
           mvn-goals: 'docker:build'
     project: 'aaf/cadi'
+    docker-image-name: 'onap/fproxy'
     stream:
       - 'master':
           branch: 'master'
@@ -66,6 +67,7 @@
           pom: 'sidecar/rproxy/pom.xml'
           mvn-goals: 'docker:build'
     project: 'aaf/cadi'
+    docker-image-name: 'onap/rproxy'
     stream:
       - 'master':
           branch: 'master'
@@ -95,6 +97,7 @@
           pom: 'sidecar/tproxy-config/pom.xml'
           mvn-goals: 'docker:build'
     project: 'aaf/cadi'
+    docker-image-name: 'onap/tproxy-config'
     stream:
       - 'master':
           branch: 'master'
