Add missing INFO verify job
Add INFO file verify job for logging-analytics repo

Change-Id: I46d3d1a66f72c04748d540b46ecec84623a10d36
Issue-ID: CIMAN-134
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/logging-analytics/logging-analytics.yaml
+++ b/jjb/logging-analytics/logging-analytics.yaml
@@ -73,3 +73,11 @@
           pattern: 'pylog/**'
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-python'
+
+- project:
+    name: logging-analytics-info
+    project-name: 'logging-analytics'
+    jobs:
+      - gerrit-info-yaml-verify
+    project: 'logging-analytics'
+    branch: 'master'
