Fix Shiro sonar job name
Change-Id: I92039fb051d56d66b0dd3f355a5ff26eaa7035a5
Issue-ID: AAI-1698
Signed-off-by: Ravi Geda <gravik@amdocs.com>

--- a/jjb/aaf/aaf-cadi.yaml
+++ b/jjb/aaf/aaf-cadi.yaml
@@ -22,7 +22,7 @@
     cron: '@daily'
     build-node: ubuntu1604-builder-4c-4g
     project: 'aaf/cadi'
-    project-name: 'aaf-cadi'
+    project-name: 'aaf-cadi-shiro'
     branch: 'master'
     mvn-params: '-f shiro/pom.xml'
     mvn-settings: 'aaf-cadi-settings'
