Add casablanca CSIT jobs for integration
Change-Id: I16e469cfb6e8b1e84fb3cf2026618b524f8b1e26
Issue-ID: INT-679
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/jjb/integration/integration-csit.yaml
+++ b/jjb/integration/integration-csit.yaml
@@ -8,6 +8,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     functionality:
       - 'functionality1':
           trigger_jobs:
