Add more timeout to SDC CLM
SDC sometimes times out during build process.
Increase the tiemout to 120 to allow more room to
process the build steps

Change-Id: Ie79bd1f6d7b26654fec7add4c5ab0dab581b87b0
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/sdc/sdc.yaml
+++ b/jjb/sdc/sdc.yaml
@@ -17,6 +17,7 @@
           mvn-profile: 'docker'
           mvn-params: '-DskipTests=true -Dnpm.registry=https://nexus.onap.org/content/repositories/npm/'
       - gerrit-maven-clm:
+          build-timeout: 120
           mvn-params: '-Dnpm.registry=https://nexus.onap.org/content/repositories/npm/'
     project: 'sdc'
     stream:
