Build Job for the Dublin dev
Change-Id: Iabfa5076862509290a1418694fb6c29f48e5a17b
Issue-ID: SO-1103
Signed-off-by: seshukm <seshu.kumar.m@huawei.com>

--- a/jjb/so/so.yaml
+++ b/jjb/so/so.yaml
@@ -16,6 +16,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'Dublin-dev':
+          branch: 'Dublin-dev'
     mvn-settings: 'so-settings'
     files: '**'
     archive-artifacts: ''
