--- a/jjb/so/so-libs.yaml
+++ b/jjb/so/so-libs.yaml
@@ -11,6 +11,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'Dublin-dev':
+          branch: 'Dublin-dev'
     mvn-settings: 'so-libs-settings'
     # due to a strange macro / variable translation problem this needs to be
     # passed as a string block to properly get the properties correctly defined
