Fix the typo for the Dublin_dev
Change-Id: I5f08c977823bf10b696e47f0e23e4b56605b9f8e
Issue-ID: SO-1103
Signed-off-by: seshukm <seshu.kumar.m@huawei.com>

--- a/jjb/so/so.yaml
+++ b/jjb/so/so.yaml
@@ -16,8 +16,8 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'Dublin-dev':
-          branch: 'Dublin-dev'
+      - 'Dublin_dev':
+          branch: 'Dublin_dev'
     mvn-settings: 'so-settings'
     files: '**'
     archive-artifacts: ''
