Add verify python job for DCAE Tosca lab
Add verify python job for DCAE Tosca lab

Change-Id: I948f85b31388bbd03b1c1ef89e8dd13ce672b75a
Issue-ID: CIMAN-208
Signed-off-by: Areli, Fuss (af732p) <af732p@att.com>

--- a/jjb/sdc/sdc-dcae-d-tosca-lab.yaml
+++ b/jjb/sdc/sdc-dcae-d-tosca-lab.yaml
@@ -6,9 +6,14 @@
     stream:
       - 'master':
           branch: 'master'
+    subproject:
+    - dcae-d-tosca-lab:
+        path: '.'
+        pattern: '**'
     mvn-settings: 'sdc-dcae-d-tosca-lab-settings'
     build-node: ubuntu1604-docker-8c-8g
     jobs:
+      - '{project-name}-{stream}-{subproject}-verify-python'
       - '{project-name}-{stream}-docker-java-daily':
           mvn-params: '-Dmaven.test.skip=true'
     docker-pom: 'pom.xml'
