--- a/jjb/sdc/sdc-dcae-d-tosca-lab.yaml
+++ b/jjb/sdc/sdc-dcae-d-tosca-lab.yaml
@@ -9,6 +9,7 @@
     mvn-settings: 'sdc-dcae-d-tosca-lab-settings'
     build-node: ubuntu1604-docker-8c-8g
     jobs:
+      - '{project-name}-{stream}-verify-python'
       - '{project-name}-{stream}-docker-java-daily':
           mvn-params: '-Dmaven.test.skip=true'
     docker-pom: 'pom.xml'
