--- a/jjb/policy/policy-apex-pdp.yaml
+++ b/jjb/policy/policy-apex-pdp.yaml
@@ -16,7 +16,7 @@
             -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn'
           script:
             !include-raw-escape: 'include-raw-docker-release.sh'
-          disabled: true
+          disabled: false
 
     project: 'policy/apex-pdp'
     stream:
