--- a/jjb/aai/aai-aai-common.yaml
+++ b/jjb/aai/aai-aai-common.yaml
@@ -10,6 +10,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'aai-aai-common-settings'
     mvn-version: 'mvn35'
     files: '**'
@@ -24,7 +26,7 @@
     build-node: ubuntu1604-builder-4c-4g
     project: 'aai/aai-common'
     project-name: 'aai-aai-common'
-    branch: 'master'
+    branch: 'casablanca'
     mvn-settings: 'aai-aai-common-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
@@ -36,6 +38,6 @@
       - gerrit-maven-clm
     project: 'aai/aai-common'
     project-name: 'aai-aai-common'
-    branch: 'master'
+    branch: 'casablanca'
     mvn-settings: 'aai-aai-common-settings'
     mvn-version: 'mvn35'
