Add the casablanca for certain aai jobs
Issue-ID: AAI-1714
Change-Id: Iae4d6fb00efbcf015bd4732a2dd98ca9b2be310d
Signed-off-by: Kajur, Harish (vk250x) <vk250x@att.com>

--- a/jjb/aai/aai-cacher.yaml
+++ b/jjb/aai/aai-cacher.yaml
@@ -14,6 +14,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'aai-cacher-settings'
     mvn-version: 'mvn35'
     files: '**'
