--- a/jjb/aai/aai-traversal.yaml
+++ b/jjb/aai/aai-traversal.yaml
@@ -14,6 +14,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'aai-traversal-settings'
     mvn-version: 'mvn35'
     files: '**'
