Add casablanca CSIT jobs for APPC
Change-Id: I15ae7d1b4030f0a0830bd6046dd75476e3eec626
Issue-ID: INT-679
Signed-off-by: Aaron Hay <ah415j@att.com>

--- a/jjb/appc/appc-csit.yaml
+++ b/jjb/appc/appc-csit.yaml
@@ -8,6 +8,8 @@
     stream:
       - 'master':
           branch: master
+      - 'casablanca':
+          branch: 'casablanca'
     functionality:
       - 'healthcheck':
           trigger_jobs: '{project-name}-{stream}-release-java-daily-checkstyle'
