Add back appc docker version job
The job was removed since there were no released java artifacts.
Now it is needed to create the stating docker image for release.

Change-Id: I6fec858153e95fdec18d183ec425c98e2b7f3005
Signed-off-by: Patrick Brady <patrick.brady@att.com>
Issue-ID: APPC-1212

--- a/jjb/appc/appc-deployment.yaml
+++ b/jjb/appc/appc-deployment.yaml
@@ -27,6 +27,8 @@
     jobs:
       - 'docker-java-daily':
           mvn-params: '-Dmaven.test.skip=true'
+      - 'docker-version-java-daily':
+          mvn-params: '-Dmaven.test.skip=true'
     project: 'appc/deployment'
     stream:
       - 'master':
