Add ccsdk/sdnc casablanca branch jobs
Add Jenkins jobs for CCSDK and SDNC casablanca branchs

Change-Id: Ib38bece7a36e0f009e760a63d30536dcd575cb29
Issue-ID: CIMAN-212
Signed-off-by: Timoney, Dan (dt5972) <dtimoney@att.com>

--- a/jjb/ccsdk/distribution.yaml
+++ b/jjb/ccsdk/distribution.yaml
@@ -11,6 +11,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'ccsdk-distribution-settings'
     files: '**'
     archive-artifacts: ''
@@ -22,14 +24,14 @@
     name: ccsdk-distribution-docker
     project-name: 'ccsdk-distribution'
     jobs:
-      - 'docker-java-daily':
-          mvn-params: '-Dmaven.test.skip=true'
       - 'docker-version-java-daily':
           mvn-params: '-Dmaven.test.skip=true'
     project: 'ccsdk/distribution'
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'ccsdk-distribution-settings'
     files: '**'
     archive-artifacts: ''
