--- a/jjb/ccsdk/ccsdk-csit.yaml
+++ b/jjb/ccsdk/ccsdk-csit.yaml
@@ -5,7 +5,11 @@
       - '{project-name}-{stream}-verify-csit-{functionality}'
       - '{project-name}-{stream}-csit-{functionality}'
     project-name: 'ccsdk'
-    stream: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     functionality:
       - 'healthcheck':
           trigger_jobs: '{project-name}-{stream}-release-java-daily-checkstyle'
