--- a/jjb/sdnc/sdnc-apps.yaml
+++ b/jjb/sdnc/sdnc-apps.yaml
@@ -12,6 +12,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'sdnc-apps-settings'
 
     # due to a strange macro / variable translation problem this needs to be
@@ -40,7 +42,7 @@
     name: sdnc-apps-docker
     project-name: 'sdnc-apps'
     jobs:
-      - 'docker-java-daily':
+      - 'docker-version-java-daily':
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
           mvn-params: '-Dmaven.test.skip=true'
@@ -48,6 +50,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'sdnc-apps-settings'
     files: '**'
     archive-artifacts: ''
