--- a/jjb/sdnc/sdnc-northbound.yaml
+++ b/jjb/sdnc/sdnc-northbound.yaml
@@ -12,6 +12,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'sdnc-northbound-settings'
 
     # due to a strange macro / variable translation problem this needs to be
