--- a/jjb/sdnc/sdnc-oam.yaml
+++ b/jjb/sdnc/sdnc-oam.yaml
@@ -12,6 +12,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'sdnc-oam-settings'
     files: '**'
     archive-artifacts: ''
@@ -21,7 +23,7 @@
     name: sdnc-oam-docker
     project-name: 'sdnc-oam'
     jobs:
-      - 'docker-java-daily':
+      - 'docker-version-java-daily':
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
           mvn-params: '-Dmaven.test.skip=true'
@@ -29,6 +31,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'sdnc-oam-settings'
     files: '**'
     archive-artifacts: ''
