Add ccsdk/sdnc casablanca branch jobs
Add Jenkins jobs for CCSDK and SDNC casablanca branchs

Change-Id: Ib38bece7a36e0f009e760a63d30536dcd575cb29
Issue-ID: CIMAN-212
Signed-off-by: Timoney, Dan (dt5972) <dtimoney@att.com>

--- a/jjb/ccsdk/apps.yaml
+++ b/jjb/ccsdk/apps.yaml
@@ -12,6 +12,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'ccsdk-apps-settings'
     # due to a strange macro / variable translation problem this needs to be
     # passed as a string block to properly get the properties correctly defined
@@ -39,14 +41,14 @@
     name: ccsdk-apps-docker
     project-name: 'ccsdk-apps'
     jobs:
-      - 'docker-java-daily':
-          mvn-params: '-Dmaven.test.skip=true'
       - 'docker-version-java-daily':
           mvn-params: '-Dmaven.test.skip=true'
     project: 'ccsdk/apps'
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'ccsdk-apps-settings'
     files: '**'
     archive-artifacts: ''
