Removal of NBI Beijing CLM
CLM should not be ran onto Beijing

Change-Id: I2b0e84a1a228262068eeda86aab36c7ca92d6a56
Issue-ID: EXTAPI-154
Signed-off-by: MatthieuGeerebaert <matthieu.geerebaert@orange.com>

--- a/jjb/externalapi/externalapi-nbi.yaml
+++ b/jjb/externalapi/externalapi-nbi.yaml
@@ -3,7 +3,6 @@
     name: externalapi-nbi
     project-name: 'externalapi-nbi'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -21,6 +20,15 @@
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
+
+- project:
+    name: externalapi-nbi-clm
+    jobs:
+      - gerrit-maven-clm
+    project: 'externalapi/nbi'
+    project-name: 'externalapi-nbi'
+    branch: 'master'
+    mvn-settings: 'externalapi-nbi-settings
 
 - project:
     name: externalapi-nbi-sonar
