Use docker node for optf-cmso builds
Most of the main jobs for optf-cmso require docker.
Moving the build node from builder to a docker one.

Change-Id: Id0fcc5ab44a8d0d6ebc60c4feed7ec5a163094d9
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/optf/optf-cmso.yaml
+++ b/jjb/optf/optf-cmso.yaml
@@ -24,6 +24,7 @@
          maven-properties: |
           cmso.registry=$
 
+    build-node: ubuntu1604-docker-8c-8g
     project: 'optf/cmso'
     stream:
       - 'master':
