AAF-Refactor CLM project block
The clm job portion needs to be on its own
project section similar to the Sonar portion.

The reason behind this, is becuase we only want
this job to be running for master and no other
branches. Also, this is in preparation for the
work that is to come from global-jjb on application
names in CLM.

Change-Id: I4bad793baa4ca339dcc2ef4beb49703aab0b8b80
Issue-ID: CIMAN-213
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/aaf/aaf-authz.yaml
+++ b/jjb/aaf/aaf-authz.yaml
@@ -3,7 +3,6 @@
     name: aaf-authz
     project-name: 'aaf-authz'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -33,3 +32,12 @@
     mvn-settings: 'aaf-authz-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: aaf-authz-clm
+    jobs:
+      - gerrit-maven-clm
+    project: 'aaf/authz'
+    project-name: 'aaf-authz'
+    branch: 'master'
+    mvn-settings: 'aaf-authz-settings'
