APPC-Refactor CLM project block
The clm job portion needs to be on its own
project section similar to the Sonar portion.

The reason behind this, is because we only want
this job to be running for master and no other
branches. Also, this is in preparation for the
work that is to come from global-jjb on application
names in CLM.

Change-Id: I45642f6f3c14acd047141d3b8f74113c0674c54a
Issue-ID: CIMAN-213
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/appc/appc-cdt.yaml
+++ b/jjb/appc/appc-cdt.yaml
@@ -3,7 +3,6 @@
     name: appc-cdt
     project-name: 'appc-cdt'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -16,3 +15,13 @@
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
+
+- project:
+    name: appc-cdt-clm
+    jobs:
+      - gerrit-maven-clm
+    project: 'appc/cdt'
+    project-name: 'appc-cdt'
+    branch: 'master'
+    mvn-settings: 'appc-cdt-settings'
+
