--- a/jjb/appc/appc-master.yaml
+++ b/jjb/appc/appc-master.yaml
@@ -3,10 +3,6 @@
     name: appc-master
     project-name: 'appc'
     jobs:
-      - gerrit-maven-clm:
-          mvn-params: '-DskipTests'
-          build-timeout: 30
-          build-node: ubuntu1604-builder-8c-8g
       - '{project-name}-{stream}-verify-java':
           build-node: ubuntu1604-builder-8c-8g
       - '{project-name}-{stream}-merge-java':
@@ -35,3 +31,15 @@
     mvn-settings: 'appc-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx4096m'
+
+- project:
+    name: appc-clm
+    jobs:
+      - gerrit-maven-clm:
+          mvn-params: '-DskipTests'
+          build-timeout: 30
+          build-node: ubuntu1604-builder-8c-8g
+    project: 'appc'
+    project-name: 'appc'
+    branch: 'master'
+    mvn-settings: 'appc-settings'
