CCSDK-Refactor CLM project block
The clm job portion needs to be on its own
project section similar to the Sonar portion.

The reason behind this, is becuase we only want
this job to be running for master and no other
branches. Also, this is in preparation for the
work that is to come from global-jjb on application
names in CLM.

Change-Id: Ief5e40b3f01cb545e800bb0899019a2da564b40b
Issue-ID: CIMAN-213
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/ccsdk/apps.yaml
+++ b/jjb/ccsdk/apps.yaml
@@ -3,7 +3,6 @@
     name: ccsdk-apps
     project-name: 'ccsdk-apps'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -36,6 +35,16 @@
     mvn-settings: 'ccsdk-apps-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: ccsdk-apps-clm
+    jobs:
+      - gerrit-maven-clm
+    project: 'ccsdk/apps'
+    project-name: 'ccsdk-apps'
+    branch: 'master'
+    mvn-settings: 'ccsdk-apps-settings'
+    build-node: ubuntu1604-builder-4c-4g
 
 - project:
     name: ccsdk-apps-docker
