--- a/jjb/ccsdk/features.yaml
+++ b/jjb/ccsdk/features.yaml
@@ -3,7 +3,6 @@
     name: ccsdk-features
     project-name: 'ccsdk-features'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -36,3 +35,13 @@
     mvn-settings: 'ccsdk-features-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: ccsdk-features-clm
+    jobs:
+      - gerrit-maven-clm
+    project: 'ccsdk/features'
+    project-name: 'ccsdk-features'
+    branch: 'master'
+    mvn-settings: 'ccsdk-features-settings'
+    build-node: ubuntu1604-builder-4c-4g
