--- a/jjb/ccsdk/sli-adaptors.yaml
+++ b/jjb/ccsdk/sli-adaptors.yaml
@@ -3,7 +3,6 @@
     name: ccsdk-sli-adaptors
     project-name: 'ccsdk-sli-adaptors'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -36,3 +35,14 @@
     mvn-settings: 'ccsdk-sli-adaptors-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: ccsdk-sli-adaptors-clm
+    jobs:
+      - gerrit-maven-clm
+    project: 'ccsdk/sli/adaptors'
+    project-name: 'ccsdk-sli-adaptors'
+    branch: 'master'
+    mvn-settings: 'ccsdk-sli-adaptors-settings'
+    build-node: ubuntu1604-builder-4c-4g
+
