--- a/jjb/ccsdk/sli-core.yaml
+++ b/jjb/ccsdk/sli-core.yaml
@@ -3,7 +3,6 @@
     name: ccsdk-sli-core
     project-name: 'ccsdk-sli-core'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -23,6 +22,7 @@
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
+
 - project:
     name: ccsdk-sli-core-sonar
     jobs:
@@ -35,3 +35,14 @@
     mvn-settings: 'ccsdk-sli-core-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: ccsdk-sli-core-clm
+    jobs:
+      - gerrit-maven-clm
+    project: 'ccsdk/sli/core'
+    project-name: 'ccsdk-sli-core'
+    branch: 'master'
+    mvn-settings: 'ccsdk-sli-core-settings'
+    build-node: ubuntu1604-builder-4c-4g
+
