--- a/jjb/ccsdk/platform-plugins.yaml
+++ b/jjb/ccsdk/platform-plugins.yaml
@@ -3,7 +3,6 @@
     name: ccsdk-platform-plugins
     project-name: 'ccsdk-platform-plugins'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -36,3 +35,14 @@
     mvn-settings: 'ccsdk-platform-plugins-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: ccsdk-platform-plugins-clm
+    jobs:
+      - gerrit-maven-clm
+    project: 'ccsdk/platform/plugins'
+    project-name: 'ccsdk-platform-plugins'
+    branch: 'master'
+    mvn-settings: 'ccsdk-platform-plugins-settings'
+    build-node: centos7-redis-4c-4g
+
