--- a/jjb/ccsdk/sli-plugins.yaml
+++ b/jjb/ccsdk/sli-plugins.yaml
@@ -3,7 +3,6 @@
     name: ccsdk-sli-plugins
     project-name: 'ccsdk-sli-plugins'
     jobs:
-      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
@@ -22,6 +21,7 @@
       deployAtEnd=true
     files: '**'
     archive-artifacts: ''
+
 - project:
     name: ccsdk-sli-plugins-sonar
     jobs:
@@ -34,3 +34,13 @@
     mvn-settings: 'ccsdk-sli-plugins-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: ccsdk-sli-plugins-clm
+    jobs:
+      - gerrit-maven-clm
+    project: 'ccsdk/sli/plugins'
+    project-name: 'ccsdk-sli-plugins'
+    branch: 'master'
+    mvn-settings: 'ccsdk-sli-plugins-settings'
+
