--- a/jjb/clamp/clamp.yaml
+++ b/jjb/clamp/clamp.yaml
@@ -4,8 +4,6 @@
     name: clamp
     project-name: 'clamp'
     jobs:
-      - gerrit-maven-clm:
-         mvn-params: '-Ddocker.pull.registry=nexus3.onap.org:10001'
       - '{project-name}-{stream}-verify-java-checkstyle':
          mvn-params: '-Ddocker.pull.registry=nexus3.onap.org:10001'
       - '{project-name}-{stream}-merge-properties-java':
@@ -46,3 +44,15 @@
     mvn-settings: 'clamp-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: clamp-clm
+    jobs:
+      - gerrit-maven-clm:
+         mvn-params: '-Ddocker.pull.registry=nexus3.onap.org:10001'
+    project: 'clamp'
+    project-name: 'clamp'
+    branch: 'master'
+    mvn-settings: 'clamp-settings'
+    build-node: ubuntu1604-docker-8c-8g
+
