--- a/jjb/optf/optf-cmso.yaml
+++ b/jjb/optf/optf-cmso.yaml
@@ -41,7 +41,7 @@
     jobs:
       - gerrit-maven-sonar
     cron: 'H 11 * * *'
-    build-node: ubuntu1604-builder-4c-4g
+    build-node: ubuntu1604-docker-8c-8g
     project: 'optf/cmso'
     project-name: 'optf-cmso'
     branch: 'master'
