--- a/jjb/so/so-csit.yaml
+++ b/jjb/so/so-csit.yaml
@@ -5,9 +5,12 @@
       - '{project-name}-{stream}-verify-csit-{functionality}'
       - '{project-name}-{stream}-csit-{functionality}'
     project-name: 'so'
-    stream: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     functionality:
       - 'integration-testing':
-          trigger_jobs: 'so-master-docker-version-java-daily'
+          trigger_jobs: '{project-name}-{stream}-docker-version-java-daily'
     robot-options: ''
-    branch: 'master'
