--- a/jjb/so/so.yaml
+++ b/jjb/so/so.yaml
@@ -16,6 +16,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'so-settings'
     files: '**'
     archive-artifacts: ''
